--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Logo Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML5 e CSS3">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quasi quas reiciendis velit maxime mollitia quibusdam eos vero magnam dicta sint, beatae blanditiis porro quod recusandae vel amet. Maxime, corrupti.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime nihil, odit alias quae expedita ducimus vero iusto quod iure porro labore similique exercitationem itaque inventore reprehenderit ratione debitis, laboriosam fugit.</p>
+            <p><a href="curso-javascript.html">Acesse o curso de JavaScript</a></p>
+            
         </article>
     </main>
 </body>
